--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 version: '3.3'
 services:
+  apache:
+    image: "httpd"
+    links:
+      - solr
+      - nutch
+    ports:
+      - "80:80"
+    volumes:
+      - ./apache:/usr/local/apache2/htdocs
   solr:
     image: "solr:7.3.1"
     ports:
@@ -14,7 +23,7 @@ services:
     image: "apache/nutch:release-1.15"
     links:
       - solr
-    environment: 
+    environment:
       - JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
     working_dir: /root/nutch
     command: '/root/nutch/bin/crawl -i -D solr.server.url=http://solr:8983/solr/mycore -s urls crawl 10'
@@ -23,5 +32,3 @@ services:
         - ./nutch/nutch-site.xml:/root/nutch/conf/nutch-site.xml
         - ./nutch/regex-urlfilter.txt:/root/nutch/conf/regex-urlfilter.txt
         - ./nutch/seed.txt:/root/nutch/urls/seed.txt
-# volumes:
-#   data:
