--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       - docker-entrypoint.sh
       - solr-precreate
       - mycore
+    volumes:
+      - ./solr/web.xml:/opt/solr/server/solr-webapp/webapp/WEB-INF/web.xml
   nutch:
     image: "apache/nutch:release-1.15"
     links:
